	Thanks to filterfalse.

	Fixed compilation of modes/view.c when build is configured with
	`--disable-extended-keys`.  Thanks to Bearcat M. Şándor (a.k.a.
	bearcatsandor).

	Fixed crashes discovered via fuzzing, most of which require rather
	unusual kind of input.

	Fixed running commands with arguments on Windows when 'shell' isn't
	cmd.exe.

0.9-beta to 0.9

	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.

	Don't use :filextype in sample vifmrc for OS X, we can't tell whether
	graphical system is running.  Thanks to piotryordanov.

	Do not add extra slash to path on picking files in the root.  Thanks to
	filterfalse.

	Properly escape newline when passing things into shell.  Thanks to
	filterfalse.

	View current directory on ".." for quickview/view mode only if no viewer
	matches such entry.

	Expand macros in :[un]select !{command}.  Thanks to Michael Corvin.

	Update the other view after file deletion (that file might be visible
	there too).

	Execute startup commands in directory of current pane.

	Fixed ruler being updated when it shouldn't even be visible.  Thanks to
	filterfalse.

	Fixed incorrect existence check for files that end with forward slash on
	*nix.  Thanks to filterfalse.

	Fixed treating `--select -` as `-` on command-line.  Thanks to
	filterfalse.

	Fixed ignoring `-` when `--no-configs` is specified.  Thanks to
	filterfalse.

	Fixed choosing files in custom views with --on-choose.

	Fixed redrawing view after loading custom list in case when cursor is
	positioned on ".." entry.  Thanks to filterfalse.

	Fixed restoring of excluded items from custom view if local filter isn't
	empty.  Thanks to filterfalse.

	Fixed incorrect cursor positioning on removing elements from custom view
	with local filter.

0.8.2 to 0.9-beta

	Removed -Werror in tests from non-developer builds.

	Added tree view.  Thanks to filterfalse and Kornel.

	Added :tree command that converts current view into a tree.
