@@ -3366,7 +3366,7 @@ flist_custom_add_spec(view_t *view, const char line[])
 	/* Skip empty lines. */
 	char *const path = (skip_whitespace(line)[0] == '\0')
 	                 ? NULL
-	                 : parse_file_spec(line, &line_num, ".");
+	                 : parse_file_spec(line, &line_num, flist_get_dir(view));
 	if(path != NULL)
 	{
 		flist_custom_add(view, path);
