@@ -50,6 +50,9 @@
 	Fixed running commands with arguments on Windows when 'shell' isn't
 	cmd.exe.
 
+	Fixed ".." not being preserved in path loaded into custom view.  Thanks to
+	filterfalse.
+
 0.9-beta to 0.9
 
 	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.
